docs/apache-airflow-providers-cncf-kubernetes/3.0.0/_sources/_api/airflow/providers/cncf/kubernetes/sensors/spark_kubernetes/index.rst.txt
:py:mod:`airflow.providers.cncf.kubernetes.sensors.spark_kubernetes`
====================================================================

.. py:module:: airflow.providers.cncf.kubernetes.sensors.spark_kubernetes


Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.cncf.kubernetes.sensors.spark_kubernetes.SparkKubernetesSensor




.. py:class:: SparkKubernetesSensor(*, application_name: str, attach_log: bool = False, namespace: Optional[str] = None, kubernetes_conn_id: str = 'kubernetes_default', api_group: str = 'sparkoperator.k8s.io', api_version: str = 'v1beta2', **kwargs)

   Bases: :py:obj:`airflow.sensors.base.BaseSensorOperator`

   Checks sparkApplication object in kubernetes cluster:

   .. seealso::
       For more detail about Spark Application Object have a look at the reference:
       https://github.com/GoogleCloudPlatform/spark-on-k8s-operator/blob/v1beta2-1.1.0-2.4.5/docs/api-docs.md#sparkapplication

   :param application_name: spark Application resource name
   :type application_name:  str
   :param namespace: the kubernetes namespace where the sparkApplication reside in
   :type namespace: str
   :param kubernetes_conn_id: The :ref:`kubernetes connection<howto/connection:kubernetes>`
       to Kubernetes cluster.
   :type kubernetes_conn_id: str
   :param attach_log: determines whether logs for driver pod should be appended to the sensor log
   :type attach_log: bool
   :param api_group: kubernetes api group of sparkApplication
   :type api_group: str
   :param api_version: kubernetes api version of sparkApplication
   :type api_version: str

   .. py:attribute:: template_fields
      :annotation: :Sequence[str] = ['application_name', 'namespace']

      

   .. py:attribute:: FAILURE_STATES
      :annotation: = ['FAILED', 'UNKNOWN']

      

   .. py:attribute:: SUCCESS_STATES
      :annotation: = ['COMPLETED']

      

   .. py:method:: poke(self, context: airflow.utils.context.Context) -> bool

      Function that the sensors defined while deriving this class should
      override.



